k8/ralph-controls.yaml
apiVersion: v1
kind: Pod
metadata:
  name: joycontroller
  namespace: ralphbot
spec:
  containers:
  - name: joycontroller
    image: tinkster42/ralph:latest
    securityContext:
      privileged: true
    tty: true
    stdin: true
    command: ["/bin/bash"]
    args: ["-c", "sleep 3600"]
    volumeMounts:
    - mountPath: /dev/input/js0
      name: js0
    #use docker-credentials
    resources:
      limits:
        cpu: 100m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 100Mi
  imagePullSecrets:
  - name: docker-credentials
  volumes:
  - name: js0
    hostPath:
      path: /dev/input/js0
      type: CharDevice
