k8/ralph-motor.yaml
apiVersion: v1
kind: Pod
metadata:
  name: motorcontroller
  namespace: ralphbot
spec:
  containers:
  - name: motorcontroller
    image: tinkster42/ralph:latest
    securityContext:
      privileged: true
    # tty: true
    # stdin: true
    # command: ["/bin/bash"]
    # args: ["-c", "sleep 3600"]
    volumeMounts:
    - mountPath: /dev/ttyAML0
      name: ttyaml0
    #use docker-credentials
    resources:
      limits:
        cpu: 100m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 100Mi
  imagePullSecrets:
  - name: docker-credentials
  volumes:
  - name: ttyaml0
    hostPath:
      path: /dev/ttyAML0
      type: CharDevice
