k8/test_test-deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-kubernetes
  namespace: ralphbot
spec:
  containers:
  - name: test-container
    image: ubuntu
    securityContext:
      privileged: true
    tty: true
    stdin: true
    command: ["/bin/bash"]
    args: ["-c", "sleep 3600"]
    volumeMounts:
    - mountPath: /dev/ttyAML0
      name: ttyaml0
    resources:
      limits:
        cpu: 100m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 100Mi
  volumes:
  - name: ttyaml0
    hostPath:
      path: /dev/ttyAML0
      type: CharDevice
